--- a/src/app/modules/header/header.component.scss
+++ b/src/app/modules/header/header.component.scss
@@ -6,16 +6,19 @@ $hamburger-hover-opacity: 0.9;
 
 .header {
     &-background {
-        width: 100%;
+        max-width: 100vw;
         height: 70px;
 
-        padding: 10px 80px;
+        padding: 10px var(--padding-container);
 
         display: flex;
         justify-content: space-between;
         align-items: center;
         position: sticky;
         top: 0;
+        overflow-x: clip;
+
+        z-index: 1;
 
         background-color: var(--background-color);
 
@@ -25,7 +28,18 @@ $hamburger-hover-opacity: 0.9;
 
         button {
             display: none;
+
+            padding-right: 0 !important;
+            margin-right: -20px !important;
         }
+    }
+
+    &-menu {
+        display: flex;
+        align-items: center;
+        flex-grow: 1;
+        justify-content: space-between;
+        padding-left: 50px;
     }
 
     &-navbar {
@@ -34,7 +48,7 @@ $hamburger-hover-opacity: 0.9;
         text-decoration: none;
         list-style: none;
 
-        font-size: 20px;
+        font-size: var(--font-menu-size);
 
         color: var(--background3-color);
 
@@ -67,7 +81,7 @@ $hamburger-hover-opacity: 0.9;
             color: var(--background4-color);
 
             li {
-                font-size: 14px;
+                font-size: var(--font-button-size);
                 padding: 8px 25px;
                 cursor: pointer;
             }
@@ -108,30 +122,81 @@ $hamburger-hover-opacity: 0.9;
     }
 }
 
-@media (max-width: 760px) {
+@media (max-width: 1024px) {
     .header {
         &-background {
-            padding: 10px 20px;
+            padding: 10px var(--padding-container);
 
             button {
                 display: block;
             }
         }
 
-        &-navbar {
-            display: none;
+        &-menu {
+            background-color: var(--background-color);
             flex-direction: column;
-            align-items: center;
-            padding-top: 30px;
+
+            height: calc(100vh - 70px);
+            min-width: 300px;
 
             position: absolute;
 
-            background-color: var(--background-color);
+            padding: 30px 0 0 0;
+            top: 70px;
+            right: 0;
+            transform: translateX(100%);
+            transition: .5s;
+
+            filter: drop-shadow(0px 0px -10px rgb(0, 0, 0));
+        }
+
+        &-menu-active {
+            transform: translateX(0%) !important;
+            transition: .5s;
+        }
+
+        &-navbar {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
 
             width: 100%;
-            height: calc(100vh - 69px);
-            bottom: 0;
-            left: 0;
+            gap: 20px;
+
+            &-button {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+
+                filter: drop-shadow(0px 0px 10px rgb(0, 0, 0));
+                background-color: var(--background-color);
+
+                border-top: 2px solid var(--destak2-color);
+
+                padding: 30px 0;
+                width: 100%;
+
+                li {
+                    min-width: 80%;
+                    text-align: center;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 760px) {
+    .header {
+        &-menu {
+            width: 100%;
+        }
+    }
+}
+
+@media (max-width: 320px) {
+    .header-background {
+        button {
+            margin-right: 0 !important;
         }
     }
 }
