--- a/src/assets/styles/global-style/_animations.scss
+++ b/src/assets/styles/global-style/_animations.scss
@@ -4,11 +4,11 @@
 
 @keyframes enter-side {
     0% {
-        transform: translateX(100%);
+        transform: translateX(100%) !important;
     }
 
     100% {
-        transform: translateX(0);
+        transform: translateX(0) !important;
     }
 }
 
