--- a/src/assets/styles/global-style/_defalut.scss
+++ b/src/assets/styles/global-style/_defalut.scss
@@ -5,6 +5,7 @@
     color: var(--button-text-color);
 
     font-weight: 1000;
+    font-size: var(--font-button-size);
 
     border: none;
     border-radius: 5px;
